infra/ec2-k8s-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Infraestructura DevOps Assessment - EC2 Free Tier con Swap y Kind

Parameters:
  KeyName:
    Description: Nombre EXACTO del KeyPair existente en AWS
    Type: AWS::EC2::KeyPair::KeyName
  
  InstanceType:
    Description: Tipo de instancia EC2
    Type: String
    Default: t2.micro 
    AllowedValues: [t2.micro, t3.micro, t3.small, t3.medium]

Resources:
  # 1. Grupo de Seguridad
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permitir SSH, HTTP y puertos K8s NodePort
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 30000
          ToPort: 32767
          CidrIp: 0.0.0.0/0

  # 2. Instancia EC2
  DevOpsInstance:
    Type: AWS::EC2::Instance
    Properties:
      # Buscamos Ubuntu 22.04 automáticamente
      ImageId: '{{resolve:ssm:/aws/service/canonical/ubuntu/server/22.04/stable/current/amd64/hvm/ebs-gp2/ami-id}}'
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroups: 
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: DevOps-Assessment-Node
      
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 15 # Subimos un poco el disco para soportar el Swap
            VolumeType: gp3

      # TRUCO DE INGENIERÍA: Configurar SWAP para simular RAM
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # 1. Crear memoria SWAP de 4GB para que Kubernetes no explote en la t2.micro
          fallocate -l 4G /swapfile
          chmod 600 /swapfile
          mkswap /swapfile
          swapon /swapfile
          echo '/swapfile none swap sw 0 0' | tee -a /etc/fstab
          
          # 2. Ajustar el sistema para usar el swap agresivamente
          sysctl vm.swappiness=30
          
          # 3. Instalación estándar
          apt-get update -y
          apt-get install -y docker.io
          usermod -aG docker ubuntu
          systemctl enable docker
          systemctl start docker
          
          snap install kubectl --classic
          
          curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.20.0/kind-linux-amd64
          chmod +x ./kind
          mv ./kind /usr/local/bin/kind

Outputs:
  PublicIP:
    Description: IP Publica de la instancia creada
    Value: !GetAtt DevOpsInstance.PublicIp
